# PeSPr

./: .gitignore  CONTRIBUTING.md  Project-Plan  README.md  main.py  pyproject.toml
config/: pespr_config.yaml.example
docs/: developer_guide.md  mojo_integration.md  project_plan.md
src/pespr/: __init__.py  analyze.py  cli.py  config_generator.py  error_catalog.py
src/pespr_mojo/: README.md  __init__.py  ast_analyzer.mojo  pattern_matcher.mojo  type_checker.mojo
tests/: test_analyze.py  test_config_generator.py  test_error_catalog.py
